# gpui-archviz

./: .gitignore  .justfile  Cargo.toml  LICENSE  README.md
crates/gpug/: Cargo.toml
crates/gpug/examples/: kitchen_sink.rs
crates/gpug/src/: gpug.rs  graph.rs  node.rs
crates/gpug/src/generators/: utils.rs
crates/gpui-components/src/: lib.rs  menu_story.rs  title_bar.rs
crates/graphview/: Cargo.toml  LICENSE  README.md
crates/graphview/examples/: kitchen_sink.rs
crates/graphview/src/: edge.rs  graph.rs  lib.rs  node.rs
crates/graphview/src/generators/: utils.rs  watts_strogatz.rs
crates/layout/: Cargo.toml  README.md
crates/layout/doc/: improvements.md
crates/layout/src/: grid.rs  layout.rs  lib.rs  svg.rs  types.rs
crates/layout/tests/: layout.rs
crates/reqwest_client/: README.md
crates/story/: Cargo.toml  README.md
crates/story/src/: lib.rs
crates/viewer/: Cargo.toml  README.md
crates/viewer/src/: kdl.rs  main.rs
crates/viewer/tests/model/: vehicle.kdl
doc/: convert_webm.sh
doc/layout/: README.md  custom.md  dagre.md  elk.md  force.md
