[package]
name = "gpug"
version = "0.1.0"
#author = ["jerlendds <oss@osintbuddy.com>"]
edition.workspace = true
publish = false
repository = "https://github.com/jerlendds/gpug"
readme = "README.md"
keywords = ["gui", "gpui", "network", "graph"]
categories = ["gui"]

[lib]
name = "gpug"
path = "src/gpug.rs"
doctest = false


#[[bin]]
#name = "gpug"
#path = "src/main.rs"

[dependencies]
dagre-rs.workspace = true
gpui.workspace = true
gpui-component.workspace = true
petgraph = "0.8.3"

[[example]]
name = "kitchen_sink"
path = "examples/kitchen_sink.rs"

[[example]]
name = "large_graph"
path = "examples/large_graph.rs"
