[package]
name = "graphview"
version = "0.1.0"
authors = [
    "jerlendds <oss@osintbuddy.com>",
    "Christian Jann <christian.jann@ymail.com>",
]
edition.workspace = true
publish = false
readme = "README.md"
keywords = ["gui", "gpui", "network", "graph"]
categories = ["gui"]

[lib]
name = "graphview"
path = "src/lib.rs"
doctest = false

[dependencies]
dagre-rs.workspace = true
gpui.workspace = true
gpui-component.workspace = true
petgraph = "0.8.3"

[[example]]
name = "kitchen_sink"
path = "examples/kitchen_sink.rs"
