[package]
name = "archviz-graphview"
version.workspace = true
license.workspace = true
authors = [
    "jerlendds <oss@osintbuddy.com>",
    "Christian Jann <christian.jann@ymail.com>",
]
edition.workspace = true
publish = false
readme = "README.md"
keywords = ["gui", "gpui", "network", "graph"]
categories = ["gui"]

[lib]
name = "graphview"
path = "src/lib.rs"
doctest = false

[dependencies]
dagre-rs.workspace = true
gpui.workspace = true
gpui-component.workspace = true
petgraph.workspace = true
tracing.workspace = true
archviz-layout = { path = "../layout" }

[[example]]
name = "kitchen_sink"
path = "examples/kitchen_sink.rs"
