[package]
name = "gpui-archviz"
version.workspace = true
license.workspace = true
authors.workspace = true
publish = false
edition.workspace = true

[dependencies]
anyhow.workspace = true
gpui.workspace = true
gpui-component = { workspace = true, features = ["tree-sitter-languages"] }
gpui-component-assets.workspace = true
gpui-component-story = { path = "../gpui-components" }
reqwest_client = { path = "../reqwest_client" }
archviz-graphview = { path = "../graphview" }

autocorrect.workspace = true
chrono.workspace = true
color-lsp.workspace = true
fake.workspace = true
itertools.workspace = true
lsp-types.workspace = true
rand.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
smol.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tree-sitter-navi.workspace = true
unindent.workspace = true
rust-i18n.workspace = true
kdl.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
gtk.workspace = true

[lints]
workspace = true
